# Pong-rl

./: CMakeLists.txt  README.md
NEW/: CMakeLists.txt
NEW/Test/src/: CMakeCache.txt  Makefile  cmake_install.cmake  games.txt  main.cpp  main.py  nn.py  runme
NEW/src/: main.cpp  main.py  pong.py  weights1.json  weights2.json
Test/: CMakeLists.txt  main.cpp  py_nums.txt  sample_game.txt
src/: data.json  main.cpp  main.py  pong.py  rl.py  sample_game.txt  sample_games.py  weights1.json  weights2.json
